# brunosearch

./: .gitignore  Dockerfile  README.md  fly.toml
backend/: Cargo.toml
backend/src/: corpus.rs  course.rs  embed.rs  main.rs  vector.rs
frontend/: bun.lockb  index.html  package.json  tailwind.config.js
frontend/src/: App.svelte
frontend/src/lib/: Header.svelte  Landing.svelte  ResultCard.svelte  SearchBar.svelte
scraper/: pyproject.toml
scraper/src/: main.py  scrape_courses.py  scrape_departments.py
