[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
async-openai = "0.26.0"
axum = "0.7.9"
axum-macros = "0.4.2"
clap = { version = "4.5.23", features = ["derive"] }
dotenvy = "0.15.7"
http = "1.1.0"
redis = { version = "0.27.5", features = ["tokio-comp", "json"] }
redis-macros = "0.4.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
subprocess = "0.2.9"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.2", features = [
    "compression-full",
    "cors",
    "fs",
] }
